--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,9 @@
-<h>About<h1/>
+<% provide(:title, 'About Us') %>
+<h1>Micropost</h1>
+<p>
+    This is the About Us page for Micropost, my
+    <a href="http://railstutorial.org/">Ruby on Rails</a>
+    sample application.
+</p>
+>
 
-<p> test <p/>
