--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>help</h1>
-<p>Help me help you.</p>
+<% provide(:title, 'Help') %>
+<h1>Micropost</h1>
+<p>
+    This is the Help page for Micropost, my
+    <a href="http://railstutorial.org/">Ruby on Rails</a>
+    sample application.
+</p>
+>
