--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Sample App</h1>
-<p>Yep it worked.</p>
+<% provide(:title, 'Home') %>
+<h1>Micropost</h1>
+<p>
+    This is the Home page for Micropost, my
+    <a href="http://railstutorial.org/">Ruby on Rails</a>
+    sample application.
+</p>
+
