Test to see if Contact Working

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,9 +1,7 @@
-<% provide(:title, 'About Us') %>
+<% provide(:title, 'Contact') %>
 <h1>Micropost</h1>
 <p>
-    This is the About Us page for Micropost, my
+    This is the Contact page for Micropost, my
     <a href="http://railstutorial.org/">Ruby on Rails</a>
     sample application.
-</p>
->
-
+</p>	
