--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,12 @@
 $grayMediumLight: #eaeaea;
 /*$grayLight: #999;*/
 /* universal */
+
+@mixin box_sizing {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	}
 html {
 overflow-y: scroll;
 }
@@ -41,24 +47,24 @@ font-weight: normal;
 color: $grayLight;
 }
 p {
-font-size: 1.1em;
-line-height: 1.7em;
+	font-size: 1.1em;
+	line-height: 1.7em;
 }
 /* header */
 #logo {
-float: left;
-margin-right: 10px;
-font-size: 1.7em;
-color: white;
-text-transform: uppercase;
-letter-spacing: -1px;
-padding-top: 9px;
-font-weight: bold;
-line-height: 1;
-&:hover {
-color: white;
-text-decoration: none;
-}
+	float: left;
+	margin-right: 10px;
+	font-size: 1.7em;
+	color: white;
+	text-transform: uppercase;
+	letter-spacing: -1px;
+	padding-top: 9px;
+	font-weight: bold;
+	line-height: 1;
+	&:hover {
+		color: white;
+		text-decoration: none;
+	}
 }
 /* footer */
 footer {
@@ -66,22 +72,80 @@ margin-top: 45px;
 padding-top: 5px;
 border-top: 1px solid $grayMediumLight;
 color: $grayLight;
-a {
-color: $gray;
-&:hover {
-color: $grayDarker;
+	a {
+	color: $gray;
+		&:hover {
+		color: $grayDarker;
+		}
+	}
+	small {
+	float: left;
+	}
+	ul {
+	float: right;
+	list-style: none;
+		li {
+		float: left;
+		margin-left: 10px;
+		}
+	}
 }
+
+/*miscellaneous*/
+.debug_dump {
+	clear: both;
+	float: left;
+	width: 100%;
+	margin-top: 45px;
+	@include box_sizing;
 }
-small {
-float: left;
+
+/*sidebar*/
+aside {
+	section {
+		padding: 10px solid $grayLighter;
+		&:first-child {
+			border: 0;
+			padding-top: 0;
+		}
+		span {
+			display: block;
+			margin-bottom: 3px;
+			line-height: 1;
+		}
+		h1 {
+			font-size: 1.6em;
+			text-align: left;
+			letter-spacing: -1px;
+			margin-bottom: 3px;
+		}
+	}
 }
-ul {
-float: right;
-list-style: none;
-li {
-float: left;
-margin-left: 10px;
+
+.gravatar {
+	float: left;
+	margin-right: 10px;
 }
+
+/* forms */
+input, textarea, select, .uneditable-input {
+	border: 1px solid #bbb;
+	width: 100%;
+	padding: 10px;
+	height: auto;
+	margin-bottom: 15px;
+	@include box_sizing;
 }
+
+#error_explanation {
+	color: #f00;
+	ul {
+		list-style: none;
+		margin: 0 0 18px 0;
+	}
+}
+.field_with_errors {
+	@extend .control-group;
+	@extend .error;
 }
 
