--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class="footer">
 <small>
+Learn how to do this! Visit	
 <a href="http://railstutorial.org/">Rails Tutorial</a>
 by Michael Hartl
 </small>
