--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Sign up</h1>
 
-<div class="row>
+<div class="row">
 	<div class ="span6 offset3">
 		<%= form_for(@user) do |f| %>
 			<%= render 'shared/error_messages' %>
@@ -16,7 +16,7 @@
 			<%= f.label :password %>
 			<%= f.password_field :password %>
 
-			<%= f.label :password_confirmation %>
+			<%= f.label :password_confirmation, "Password Confirmation" %>
 			<%= f.password_field :password_confirmation %>
 
 			<%= f.submit "Create My Account", class: "btn btn-large btn-primary" %>
