--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -113,11 +113,11 @@ color: $grayLight;
 /*sidebar*/
 aside {
 	section {
-		padding: 10px solid $grayLighter;
+		padding: 12px solid $grayLighter;
 		&:first-child {
 			border: 0;
 			padding-top: 0;
-		}
+text-align: left;	}
 		span {
 			display: block;
 			margin-bottom: 3px;
@@ -134,7 +134,7 @@ aside {
 
 .gravatar {
 	float: left;
-	margin-right: 5px;
+	margin-right: 8px;
 }
 
 /* forms */
