--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,7 +54,7 @@ h2 {
 	color: $grayLight;
 }
 
-h3 {
+h6 {
 	font-size: 1.7em;
 	letter-spacing: -1px;
 	margin-top: 20px;
@@ -187,3 +187,37 @@ input, textarea, select, .uneditable-input {
 		}
 	}
 }
+
+/* microposts */
+.microposts {
+	list-style: none;
+	margin: 10px 0 0 0;
+	li {
+		padding: 10px 0;
+		border-top: 1px solid #e8e8e8;
+	}
+}
+.content {
+	display: block;
+	font-size: 14pt;
+	text-align: left;
+	letter-spacing: -1px
+	}
+.timestamp {
+	color: $grayLight;
+	font-size: 12pt;
+	text-align: left;
+	letter-spacing: -1px;
+}
+.gravatar {
+	float: left;
+	margin-right: 10px;
+}
+
+aside {
+	textarea {
+		height: 100px;
+		margin-bottom: 5px;
+	}
+}
+
