--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@
 	<% end %>
 
 	<%= gravatar_for @user %>
-	<a href="http://gravatar.com/emails">change</a>
+	 Change your profile picture with <a href="http://gravatar.com/emails">Gravatar</a>. It only takes a moment to register!
 	</div>
 </div>
 
