--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Contact') %>
 <h1>Micropost</h1>
 <p>
-If you found your way to this page, you already have my phone number or at the very least can find me on Facebook.
+If you found your way to this page, you probably already have my phone number or at the very least can find me on Facebook!
 </p>	
