--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,17 @@
 <% provide(:title, 'Help') %>
 <h1>Micropost</h1>
+
+<h6> The home screen </h6>
 <p>
-    This site isn't that complicated. Figure it out.
+The home screen is where you can write new posts, as well as view the posts of any other users you are following alongside your own.
 </p>	
+
+<h6> Following users </h6>
+<p>To follow your friends, click the "Users" link in the top right of the page, then find your friends and click their name or picture. This will bring you to ttheir profile page, and simply click "Follow" to have their posts appear in the feed on your home page.</p>
+
+<h6> Changing your profile picture </h6>
+
+<p>
+To upload or change your profile picture, click "Account" and then "Settings", then follow the link to the Gravatar home page. Gravatar is a free image hosting site that associates a picture with your email address. It's easy!
+</p>
+
