--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -70,6 +70,17 @@ p {
 }
 
 /* header */
+
+.navbar-inner {
+  background-color: black; /* background color will be black for all browsers */
+
+}
+
+/*
+.container {
+ background-color: green;
+ }*/
+
 #logo {
 	float: left;
 	margin-right: 10px;
