--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,12 +4,12 @@
 			<%= link_to "Micropost", root_path, id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
-					<li><%= link_to "Home", root_path %></li>
-					<li><%= link_to "Help", help_path %></li>
+					<li><%= link_to "Home", root_path, id: "head" %></li>
+					<li><%= link_to "Help", help_path, id: "head" %></li>
 					<% if signed_in? %>
-					<li><%= link_to "Users", users_path %></li>
+					<li><%= link_to "Users", users_path, id: "head" %></li>
 					<li id="fat-menu" class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						<a id="head" href="#" class="dropdown-toggle" data-toggle="dropdown">
 							Account <b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
@@ -20,7 +20,7 @@
 						</ul>   
 					</li>
 					<% else %>
-						<li><%= link_to "Sign in", signin_path %></li>
+						<li><%= link_to "Sign in", signin_path, id:"head" %></li>
 					<% end %>
 				</ul>
 			</nav>
