--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 			<%= gravatar_for user, size: 52 %>
 			<%= link_to user.name, user %>
 			<% if current_user.admin? && !current_user?(user) %>
-				| <%= link_to "delete", user, method: :delete, confirm: "Are you sure?" %>
+				<%= link_to "delete", user, method: :delete, confirm: "Are you sure?" %>
 			<% end %>
 		</li>
 	<% end %>
