add follow button to users

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,6 +74,7 @@ p {
 .navbar-inner {
   background-color: #000; /* background color will be black for all browsers */
   background-image: none;
+  filter: none;
 }
 
 /*
