--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,22 @@
 		<li>
 			<%= gravatar_for user, size: 52 %>
 			<%= link_to user.name, user %>
+
+			<% unless current_user?(user) %>
+				<div id="follow_form">
+				<% if current_user.following?(user) %>
+					<%= form_for(current_user.relationships.find_by_followed_id(user), html: { method: :delete }) do |f| %>
+						<%= f.submit "Unfollow", class: "btn" %>
+					<% end %>
+				<% else %>
+					<%= form_for(current_user.relationships.build(followed_id: user.id)) do |f| %>
+						<div><%= f.hidden_field :followed_id %></div>
+						<%= f.submit "Follow", class: "btn btn-primary" %>
+					<% end %>
+				<% end %>
+				</div>
+			<% end %>
+
 			<% if current_user.admin? && !current_user?(user) %>
 				<%= link_to "delete", user, method: :delete, confirm: "Are you sure?" %>
 			<% end %>
