tinker with stylesheet

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,7 +75,11 @@ p {
   background-color: #000; /* background color will be black for all browsers */
   background-image: none;
   filter: none;
+  background-repeat: no-repeat;
 }
+
+
+
 
 /*
 .navbar-fixed-top {
